src/objects/Credit_Refund_Detail__c.object
<CustomObject>
    <description>Stores multiple transaction reference numbers related to Credit Refunds</description>
    <fields>
        <fullName>Credit_Card_Token__c</fullName>
        <label>Credit Card Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Adjustment__c</fullName>
        <label>Order Adjustment</label>
        <referenceTo>Order_Adjustment__c</referenceTo>
        <relationshipName>Credit_Refund_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Bank_Response_DateTime__c</fullName>
        <label>Original Bank Response DateTime</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Order_Total__c</fullName>
        <label>Original Order Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Transaction_Reference_Number__c</fullName>
        <description>Transaction Reference Number for Original Settle Transaction</description>
        <label>Original Transaction Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <description>Amount to Refund</description>
        <label>Refund Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <label>Refund Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Transaction_Reference_Number__c</fullName>
        <description>Transaction Reference Number for Refund</description>
        <label>Refund Transaction Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <description>Details from Credit Refund Request in Case of Error</description>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Credit Refund Request</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>OA ID + Original Transaction Reference Number</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Credit Transaction Detail</label>
    <nameField>
        <displayFormat>CRD-{00000}</displayFormat>
        <label>Credit Refund Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Refund Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>